2014-01-08  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c:
	  - show_cpu_affinities(): Fix for hyper-threaded systems
	    (LP: #1251209) - thanks Dave Love.
	  - show_numa_memory(): Fix memory leak (calling free(3) rather than
	    numa_free_nodemask()).
	  - show_sizeof():
	    - Added lots of missing standard types (as documented in types.h(P)).
	    - Sorted list.
	  - show_cgroups_linux(): Fixed memory leak caused by misuse of
	    strsep(3).

2013-12-06  James Hunt  <james.hunt@ubuntu.com>

	* configure.ac: AM_INIT_AUTOMAKE: Ensure automake v1.13 is
	  passed 'serial-tests'.

2013-12-04  James Hunt  <james.hunt@ubuntu.com>

	* src/tests/check_all_args.in: Fix to sections regex to avoid
	  matching the TERMCAP variable (which contains various nasty
	  characters).

2013-12-03  James Hunt  <james.hunt@ubuntu.com>

	* configure.ac:
	  - Put AC_COPYRIGHT onto one line for older automakes.
	  - Removed unused AC_TYPE_* checks.
	  - "Fix" to handle the automake 1.13 "serial-tests" fiasco
	     and always display test verbose test output.
	  - Conditionally use format-security compiler flag.
	* src/procenv.c: show_numa_memory(): Tell libnuma not to call exit(3). 
	* src/tests/check_all_args.in:
	  - Add debug handling.
	  - Use python rather than json_pp since the latter is not available
	    on older perl installations.

2013-12-02  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c:
	  - show_mounts_linux(): Always initialise locals.
	  - show_compiler(): Guard __TIMESTAMP__ which isn't available
	    on old compilers.

2013-11-30  James Hunt  <james.hunt@ubuntu.com>

	* src/tests/check_all_args.in: Don't run XML tests if control
	  characters found in the environment (for example in $TERMCAP
	  when running under GNU Screen) since XMl validation will fail
	  (which is only partly reasonable given that such charactes
	  cannot be reliably encoded in XML anyway).

2013-11-29  Dave Love  <fx@gnu.org>

	* Fix for building on RHEL 5 (LP: #1256415).
