@@ -1,4 +1,4 @@
-.TH PROCENV "1" "2013-11-27" "User Commands"
+.TH PROCENV "1" "2014-01-10" "User Commands"
 .\"
 .SH NAME
 procenv \- display process environment details
@@ -485,7 +485,7 @@ Kees Cook
 .RB < kees@ubuntu.com > "" "."
 .\"
 .SH COPYRIGHT
-Copyright \(co 2012-2013 James Hunt
+Copyright \(co 2012-2014 James Hunt
 .RB < james.hunt@ubuntu.com >
 and
 Kees Cook
